<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="th.ac.comsci.studen.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_save"
        android:name="th.ac.comsci.studen.ui.save.SaveFragment"
        android:label="@string/title_save"
        tools:layout="@layout/fragment_save" />

    <fragment
        android:id="@+id/navigation_display"
        android:name="th.ac.comsci.studen.ui.display.DisplayFragment"
        android:label="@string/title_display"
        tools:layout="@layout/fragment_display" />
</navigation>