<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterdata"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/std_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id_studen"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="bold"
            />
            android:autofillHints="" tools:targetApi="o"
            />

        <EditText
            android:id="@+id/std_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_lastname"
            android:inputType="textPersonName"
            android:textAlignment="center" />
            android:autofillHints="" tools:targetApi="o" />

        <EditText
            android:id="@+id/std_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/major"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/std_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sex"
            android:inputType="textPersonName"
            android:textAlignment="center" />
            android:autofillHints="" tools:targetApi="o" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/save" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_state"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>